policies/constraints/pods-required-app-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pods-required-app-label
  annotations:
    policycontroller.gke.io/constraintData: |
      "{
        description: 'Requires Pods to have the name "app" in order to leverage the podSelector feature of NetworkPolicies.',
        remediation: 'Any Pods should have the "app" label.'
      }"
spec:
  enforcementAction: deny
  match:
    kinds:
    - apiGroups:
      - ""
      kinds:
      - Pod
    excludedNamespaces:
    - config-management-monitoring
    - config-management-system
    - default
    - gatekeeper-system
    - kube-node-lease
    - kube-public
    - kube-system
    - resource-group-system
    - poco-trial
  parameters:
    labels:
    - key: app
